src/styles/base/typography.css
body {
  margin: 0;
  font-family: var(--body-font-family);
  font-size: var(--step-0);
  font-weight: var(--body-font-weight);
  line-height: var(--body-line-height);
  color: var(--text-high-emphasis);
  background-color: var(--background);
  text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
}

a {
  color: var(--primary);
  text-decoration: none;
  transition: all 0.25s ease-out;
}

a:hover {
  color: var(--primary-variant);
}

a:not([href], [class]),
a:not([href], [class]):hover {
  color: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-weight: 500;
  line-height: 1.2;
  color: var(--text-high-emphasis);
}

h1,
.h1 {
  font-size: var(--step-5);
  line-height: 1;
}

h2,
.h2 {
  font-size: var(--step-2);
  line-height: 1;
}

h3,
.h3 {
  font-size: var(--step-1);
  line-height: 1.2;
}

h4,
.h4 {
  font-size: var(--step-0);
  line-height: 1.2;
}

h5,
.h5 {
  font-size: var(--step--1);
  line-height: 1.2;
}

h6,
.h6 {
  font-size: var(--step--2);
  line-height: 1.2;
}

hr {
  margin-top: 2rem;
  margin-bottom: 2rem;
  border: 0;
  border-top: 1px solid #ddd;
}

img {
  max-width: 100%;
  height: auto;
}

ol,
ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.list-unstyled {
  list-style-type: none;
}

.list-inline {
  padding-left: 0;
  list-style: none;
}

.list-inline-item {
  display: inline-block;
}

blockquote {
  max-inline-size: 68ch;
  padding-left: var(--space-s);
  margin: 0 0 var(--space-s) var(--space-2xs);

  font-size: var(--space-s);
  color: var(--text-medium-emphasis);
  text-wrap: balance;
  border-left: 5px solid var(--text-low-emphasis);
}

blockquote cite {
  display: block;
  font-weight: 500;
  color: var(--text-medium-emphasis);
  text-indent: var(--space-s);
  opacity: 0.5;
}

blockquote cite::before {
  content: '—';
}

.blockquote-footer::before {
  content: '— ';
}

